--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http: ^0.12.2
   flutter_svg: ^0.19.0
   carousel_slider: ^4.0.0
+  fluttertoast: ^8.0.8
   flutter:
     sdk: flutter
 
