--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13",
-    "random-number": "^0.0.9"
+    "random-number": "^0.0.9",
+    "stripe": "^8.178.0"
   }
 }
