--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  dio: ^4.0.0
   google_fonts: ^2.1.0
   http: ^0.13.3
   flutter_svg: ^0.22.0
